# controllers/postController.go
@@ -1,104 +1,108 @@
 package controllers
 
 import (
-	"fmt"
 	"gologin/inits"
 	"gologin/models"
 	"gologin/response"
-	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-// CreatePost
-func CreatePost(ctx *gin.Context) {
-	var body struct {
-		UserID uint `json:"user_id"`
-		Title  string
-		Body   string
-		Likes  int
-		Draft  bool
-		Author string
-	}
-	ctx.BindJSON(&body)
+// // CreatePost
+// func CreatePost(ctx *gin.Context) {
+// 	var body struct {
+// 		UserID uint `json:"user_id"`
+// 		Title  string
+// 		Body   string
+// 		Likes  int
+// 		Draft  bool
+// 		Author string
+// 	}
+// 	ctx.BindJSON(&body)
 
-	// Get the user from the context
-	user, exists := ctx.Get("user")
-	if !exists {
-		ctx.JSON(http.StatusBadRequest, response.ResponseUserPasswordError())
-		return
-	}
-	body.UserID = user.(models.User).ID
+// 	// Get the user from the context
+// 	user, exists := ctx.Get("user")
+// 	if !exists {
+// 		ctx.JSON(http.StatusBadRequest, response.ResponseUserPasswordError())
+// 		return
+// 	}
+// 	body.UserID = user.(models.User).ID
 
-	post := models.Post{
-		Title:  body.Title,
-		Body:   body.Body,
-		Likes:  body.Likes,
-		Draft:  body.Draft,
-		Author: body.Author,
-		UserID: body.UserID,
-	}
+// 	post := models.Post{
+// 		Title:  body.Title,
+// 		Body:   body.Body,
+// 		Likes:  body.Likes,
+// 		Draft:  body.Draft,
+// 		Author: body.Author,
+// 		UserID: body.UserID,
+// 	}
 
-	fmt.Println(post)
-	result := inits.DB.Create(&post)
-	if result.Error != nil {
-		ctx.JSON(http.StatusInternalServerError, response.ResponseServerError())
-		return
-	}
-	ctx.JSON(http.StatusOK, response.ResponseOkWIthData(post))
-}
+// 	fmt.Println(post)
+// 	result := inits.DB.Create(&post)
+// 	if result.Error != nil {
+// 		ctx.JSON(http.StatusInternalServerError, response.ResponseServerError())
+// 		return
+// 	}
+// 	ctx.JSON(http.StatusOK, response.ResponseOkWIthData(post))
+// }
 
-// UpdatePost
-func UpdatePost(ctx *gin.Context) {
-	var body struct {
-		Title  string
-		Body   string
-		Likes  int
-		Draft  bool
-		Author string
-	}
+// // UpdatePost
+// func UpdatePost(ctx *gin.Context) {
+// 	var body struct {
+// 		Title  string
+// 		Body   string
+// 		Likes  int
+// 		Draft  bool
+// 		Author string
+// 	}
 
-	ctx.BindJSON(&body)
+// 	ctx.BindJSON(&body)
 
-	var post models.Post
+// 	var post models.Post
 
-	result := inits.DB.First(&post, ctx.Param("id"))
-	if result.Error != nil {
-		ctx.JSON(http.StatusInternalServerError, response.ResponseServerError())
-		return
-	}
-	inits.DB.Model(&post).Updates(models.Post{Title: body.Title, Body: body.Body, Likes: body.Likes, Draft: body.Draft, Author: body.Author})
+// 	result := inits.DB.First(&post, ctx.Param("id"))
+// 	if result.Error != nil {
+// 		ctx.JSON(http.StatusInternalServerError, response.ResponseServerError())
+// 		return
+// 	}
+// 	inits.DB.Model(&post).Updates(models.Post{Title: body.Title, Body: body.Body, Likes: body.Likes, Draft: body.Draft, Author: body.Author})
 
-	ctx.JSON(http.StatusOK, response.ResponseOkWIthData(post))
-}
+// 	ctx.JSON(http.StatusOK, response.ResponseOkWIthData(post))
+// }
 
-// DeletePost
-func DeletePost(ctx *gin.Context) {
-	id := ctx.Param("id")
-	inits.DB.Delete(&models.Post{}, id)
+// // DeletePost
+// func DeletePost(ctx *gin.Context) {
+// 	id := ctx.Param("id")
+// 	inits.DB.Delete(&models.Post{}, id)
 
-	ctx.JSON(http.StatusOK, response.ResponseOk())
-}
+// 	ctx.JSON(http.StatusOK, response.ResponseOk())
+// }
 
-// GetPost
-func GetPost(ctx *gin.Context) {
-	fmt.Println("GetPost")
-	var post models.Post
-	result := inits.DB.First(&post, ctx.Param("id"))
-	if result.Error != nil {
-		ctx.JSON(http.StatusInternalServerError, response.ResponseServerError())
-		return
-	}
-	ctx.JSON(http.StatusOK, response.ResponseOkWIthData(post))
-}
+// // GetPost
+// func GetPost(ctx *gin.Context) {
+// 	fmt.Println("GetPost")
+// 	var post models.Post
+// 	result := inits.DB.First(&post, ctx.Param("id"))
+// 	if result.Error != nil {
+// 		ctx.JSON(http.StatusInternalServerError, response.ResponseServerError())
+// 		return
+// 	}
+// 	ctx.JSON(http.StatusOK, response.ResponseOkWIthData(post))
+// }
 
-// GetPosts
+// @Summary 获取所有博客
+// @Description 获取所有博客
+// @Tags post
+// @Accept  json
+// @Produce json
+// @Success 200  {object}  object{code=number,message=string,data=[]models.Post}
+// @Router /post [get]
 func GetPosts(ctx *gin.Context) {
 	var posts []models.Post
 	result := inits.DB.Find(&posts)
 	if result.Error != nil {
-		ctx.JSON(http.StatusInternalServerError, response.ResponseServerError())
+		response.FailServer(ctx)
 		return
 	}
-	ctx.JSON(http.StatusOK, response.ResponseOkWIthData(posts))
+	response.OkWithData(posts, ctx)
 }
